--- a/src/assets/variables.scss
+++ b/src/assets/variables.scss
@@ -5,7 +5,7 @@
   //*primary
   --colorGrayishBlue: #8486a9;
   --colorSoftRed: #fb6087;
-  --colorPurple: #2a232e;
+  // --colorPurple: #2a232e;
 
   //*neytral
   --colorDarkDesaturatedBlue: #343650;
