--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,14 +1,16 @@
 .footer {
+  position: absolute;
+  bottom: 0;
   width: 100%;
-  height: 197px;
+  min-height: 20%;
   background-image: url("/src/assets/images/pattern-hills.svg");
   background-repeat: no-repeat;
   background-position: bottom;
   background-size: contain;
 }
+
 @media (min-width: 768px) {
   .footer {
-    background-position: center;
-    background-size: cover;
+    min-height: 30%;
   }
 }
