--- a/src/components/Main/Main.module.scss
+++ b/src/components/Main/Main.module.scss
@@ -1,14 +1,15 @@
 .main {
   width: 100%;
-  max-width: 1440px;
+  height: 100%;
+  // max-width: 1440px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   background-image: url("../../assets/images/bg-stars.svg");
-  background-repeat: no-repeat;
+  background-repeat: repeat;
   background-position: center;
-  background-size: cover;
+  background-size: contain;
   flex: 1;
   gap: 50px;
 }
