--- a/src/assets/variables.scss
+++ b/src/assets/variables.scss
@@ -5,6 +5,7 @@
   //*primary
   --colorGrayishBlue: #8486a9;
   --colorSoftRed: #fb6087;
+  --colorSoftRedTop: #d45272;
   // --colorPurple: #2a232e;
 
   //*neytral
