--- a/src/components/Main/Main.module.scss
+++ b/src/components/Main/Main.module.scss
@@ -1,6 +1,6 @@
 .main {
   width: 100%;
-  height: 100%;
+  max-height: 90%;
   // max-width: 1440px;
   display: flex;
   flex-direction: column;
@@ -21,6 +21,10 @@
 }
 
 @media (min-width: 768px) {
+  .main {
+    max-height: 80%;
+  }
+
   .title {
     font-size: 1.4rem;
   }
