--- a/src/components/MainContainer/MainContainer.module.scss
+++ b/src/components/MainContainer/MainContainer.module.scss
@@ -1,9 +1,11 @@
 .mainContainer {
+  position: relative;
   width: 100%;
   height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   text-align: center;
+  overflow: hidden;
 }
